1-9 add notes, select within layer, right click -> delete in selection

--- a/timelinelayerwidget.ui
+++ b/timelinelayerwidget.ui
@@ -52,6 +52,29 @@
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QComboBox" name="postprocess_script">
+       <property name="focusPolicy">
+        <enum>Qt::ClickFocus</enum>
+       </property>
+       <property name="editable">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_edit_script">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>Edit</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
