--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -35,12 +35,89 @@
     </property>
     <addaction name="actionAdd_layer"/>
    </widget>
+   <widget class="QMenu" name="menuLayer">
+    <property name="title">
+     <string>Layer</string>
+    </property>
+    <widget class="QMenu" name="menuAdd_Placeholder">
+     <property name="title">
+      <string>Add Placeholder</string>
+     </property>
+     <addaction name="action1"/>
+     <addaction name="action2"/>
+     <addaction name="action3"/>
+     <addaction name="action4"/>
+     <addaction name="action5"/>
+     <addaction name="action6"/>
+     <addaction name="action7"/>
+     <addaction name="action8"/>
+     <addaction name="action9"/>
+    </widget>
+    <addaction name="menuAdd_Placeholder"/>
+    <addaction name="actionDelete_Selection"/>
+   </widget>
    <addaction name="menuTimeline"/>
+   <addaction name="menuLayer"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionAdd_layer">
    <property name="text">
     <string>Add layer</string>
+   </property>
+  </action>
+  <action name="action0">
+   <property name="text">
+    <string>0</string>
+   </property>
+  </action>
+  <action name="action1">
+   <property name="text">
+    <string>Placeholder 0</string>
+   </property>
+  </action>
+  <action name="action2">
+   <property name="text">
+    <string>Placeholder 1</string>
+   </property>
+  </action>
+  <action name="action3">
+   <property name="text">
+    <string>Placeholder 2</string>
+   </property>
+  </action>
+  <action name="action4">
+   <property name="text">
+    <string>Placeholder 3</string>
+   </property>
+  </action>
+  <action name="action5">
+   <property name="text">
+    <string>Placeholder 4</string>
+   </property>
+  </action>
+  <action name="action6">
+   <property name="text">
+    <string>Placeholder 5</string>
+   </property>
+  </action>
+  <action name="action7">
+   <property name="text">
+    <string>Placeholder 6</string>
+   </property>
+  </action>
+  <action name="action8">
+   <property name="text">
+    <string>Placeholder 7</string>
+   </property>
+  </action>
+  <action name="action9">
+   <property name="text">
+    <string>Placeholder 8</string>
+   </property>
+  </action>
+  <action name="actionDelete_Selection">
+   <property name="text">
+    <string>Delete Selection</string>
    </property>
   </action>
  </widget>
