Added event type GUI.
Fuck Qt's model system with a rusty cactus

holy shit why was it so fucking hard to make a two tier tree with different columns for each indentation level
SERIOUSLY

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -65,8 +65,15 @@
     <addaction name="menuAdd_Placeholder"/>
     <addaction name="actionDelete_Selection"/>
    </widget>
+   <widget class="QMenu" name="menuProject">
+    <property name="title">
+     <string>Project</string>
+    </property>
+    <addaction name="actionProject_Settings"/>
+   </widget>
    <addaction name="menuTimeline"/>
    <addaction name="menuLayer"/>
+   <addaction name="menuProject"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionAdd_layer">
@@ -169,6 +176,11 @@
   <action name="actionRemove_layer">
    <property name="text">
     <string>Remove layer</string>
+   </property>
+  </action>
+  <action name="actionProject_Settings">
+   <property name="text">
+    <string>Project Settings</string>
    </property>
   </action>
  </widget>
@@ -316,6 +328,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionProject_Settings</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>openProjectSettingsDialog()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>379</x>
+     <y>265</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>openTimelineSettingsDialog()</slot>
@@ -323,5 +351,6 @@
   <slot>saveAs()</slot>
   <slot>open()</slot>
   <slot>exportAs()</slot>
+  <slot>openProjectSettingsDialog()</slot>
  </slots>
 </ui>
