--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -33,13 +33,8 @@
     <property name="title">
      <string>Timeline</string>
     </property>
-    <addaction name="actionOpen"/>
-    <addaction name="separator"/>
     <addaction name="actionTimeline_Settings"/>
-    <addaction name="separator"/>
-    <addaction name="actionSave"/>
-    <addaction name="actionSave_As"/>
-    <addaction name="actionExport"/>
+    <addaction name="actionExport_Timeline"/>
    </widget>
    <widget class="QMenu" name="menuLayer">
     <property name="title">
@@ -63,27 +58,29 @@
     <addaction name="actionRemove_layer"/>
     <addaction name="separator"/>
     <addaction name="menuAdd_Placeholder"/>
+    <addaction name="actionAdd_User_Event"/>
     <addaction name="actionDelete_Selection"/>
    </widget>
    <widget class="QMenu" name="menuProject">
     <property name="title">
      <string>Project</string>
     </property>
+    <addaction name="actionNew_Project"/>
+    <addaction name="actionOpen_Project"/>
+    <addaction name="separator"/>
     <addaction name="actionProject_Settings"/>
+    <addaction name="separator"/>
+    <addaction name="actionSave_Project"/>
+    <addaction name="actionSave_Project_As"/>
    </widget>
+   <addaction name="menuProject"/>
    <addaction name="menuTimeline"/>
    <addaction name="menuLayer"/>
-   <addaction name="menuProject"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionAdd_layer">
    <property name="text">
     <string>Add layer</string>
-   </property>
-  </action>
-  <action name="action0">
-   <property name="text">
-    <string>0</string>
    </property>
   </action>
   <action name="action1">
@@ -144,33 +141,34 @@
     <string>Timeline Settings</string>
    </property>
   </action>
-  <action name="actionSave">
+  <action name="actionSave_Project">
    <property name="text">
     <string>Save</string>
+   </property>
+   <property name="toolTip">
+    <string>Save Project</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
    </property>
   </action>
-  <action name="actionSave_As">
+  <action name="actionSave_Project_As">
    <property name="text">
     <string>Save As...</string>
+   </property>
+   <property name="toolTip">
+    <string>Save Project As</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+S</string>
    </property>
   </action>
-  <action name="actionExport">
+  <action name="actionExport_Timeline">
    <property name="text">
-    <string>Export</string>
+    <string>Export Timeline</string>
    </property>
-  </action>
-  <action name="actionOpen">
-   <property name="text">
-    <string>Open</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+O</string>
+   <property name="toolTip">
+    <string>Export Timeline</string>
    </property>
   </action>
   <action name="actionRemove_layer">
@@ -181,6 +179,24 @@
   <action name="actionProject_Settings">
    <property name="text">
     <string>Project Settings</string>
+   </property>
+  </action>
+  <action name="actionNew_Project">
+   <property name="text">
+    <string>New Project</string>
+   </property>
+  </action>
+  <action name="actionOpen_Project">
+   <property name="text">
+    <string>Open Project</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
+   </property>
+  </action>
+  <action name="actionAdd_User_Event">
+   <property name="text">
+    <string>Add Event...</string>
    </property>
   </action>
  </widget>
@@ -249,10 +265,10 @@
    </hints>
   </connection>
   <connection>
-   <sender>actionSave</sender>
+   <sender>actionSave_Project</sender>
    <signal>triggered()</signal>
    <receiver>MainWindow</receiver>
-   <slot>save()</slot>
+   <slot>saveProject()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>-1</x>
@@ -265,26 +281,10 @@
    </hints>
   </connection>
   <connection>
-   <sender>actionSave_As</sender>
+   <sender>actionSave_Project_As</sender>
    <signal>triggered()</signal>
    <receiver>MainWindow</receiver>
-   <slot>saveAs()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>379</x>
-     <y>265</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>actionOpen</sender>
-   <signal>triggered()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>open()</slot>
+   <slot>saveProjectAs()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>-1</x>
@@ -313,10 +313,10 @@
    </hints>
   </connection>
   <connection>
-   <sender>actionExport</sender>
+   <sender>actionExport_Timeline</sender>
    <signal>triggered()</signal>
    <receiver>MainWindow</receiver>
-   <slot>exportAs()</slot>
+   <slot>exportTimelineAs()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>-1</x>
@@ -344,13 +344,29 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionOpen_Project</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>openProject()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>379</x>
+     <y>265</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>openTimelineSettingsDialog()</slot>
-  <slot>save()</slot>
-  <slot>saveAs()</slot>
-  <slot>open()</slot>
-  <slot>exportAs()</slot>
+  <slot>saveProject()</slot>
+  <slot>saveProjectAs()</slot>
+  <slot>openProject()</slot>
+  <slot>exportTimelineAs()</slot>
   <slot>openProjectSettingsDialog()</slot>
  </slots>
 </ui>
